<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_group_proxy_info">
        <Preference
            android:key="@string/preference_proxy_enabled_key" />
        <Preference
            android:key="@string/preference_open_wifi_key"
            android:summary="@string/preference_open_wifi_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_group_general">
        <SwitchPreferenceCompat
            android:key="@string/preference_notification_enabled_key"
            android:title="@string/preference_notification_enabled_title"
            android:summary="@string/preference_notification_enabled_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>